@@ -5,6 +5,7 @@
 	* Build using -lncurses on Mac (ncursesw not available).
 	* Use c99 boolean for results 'show' instead of two value enum.
 	* Increase compilation warnings and clean most of them up.
+	* Fix pager display bug on long lines.
 
 0.5 Bertrand Janin <b@janin.com> (2013-08-01)
 
